# data-hygiene-auditor

./: .gitattributes  .gitignore  AUDIT.md  CHANGELOG.md  DECISIONS.md  FAILURES.md  HANDOFF.md  PLAN.md  README.md  audit.py  generate_sample.py  pyproject.toml
.github/actions/audit/: action.yml
.github/workflows/: ci.yml  publish.yml
data_hygiene_auditor/: __init__.py  api.py  cli.py  core.py  detection.py  rules.py  schema.py  suggestions.py  trend.py
data_hygiene_auditor/reporting/: __init__.py  excel.py  html.py  pdf.py
samples/: README.md  rules_example.json
samples/input/: sample_messy_data.xlsx  sample_schema.json
samples/output/: generated_schema.json  sample_messy_data_audit_findings.xlsx  sample_messy_data_audit_report.html  sample_messy_data_audit_results.json
tests/: test_api.py  test_detection.py  test_engines.py  test_fuzzy.py  test_integration.py  test_rules.py  test_schema.py  test_suggestions.py  test_trend.py
