[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-hygiene-auditor"
version = "1.0.0"
description = "Detect data quality issues in Excel and CSV files — mixed formats, misused fields, placeholder floods, and phantom duplicates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Lailara LLC"},
]
keywords = ["data-quality", "excel", "csv", "audit", "data-hygiene", "data-profiling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "reportlab>=4.0",
]

[tool.setuptools]
py-modules = ["audit"]

[project.scripts]
data-hygiene-audit = "audit:main"

[project.urls]
Homepage = "https://github.com/MsShawnP/Data-Hygiene-Auditor"
Repository = "https://github.com/MsShawnP/Data-Hygiene-Auditor"
